umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_bis_benzene_chromium_eclipsed.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D6h
order: 24
equivalence_sets:
  - - Cr(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - H(7)
    - H(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
  - - C(13)
    - C(14)
    - C(15)
    - C(16)
    - C(17)
    - C(18)
    - H(19)
    - H(20)
    - H(21)
    - H(22)
    - H(23)
    - H(24)
