umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_borazine.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - B(0)
    - B(1)
    - B(2)
  - - H(3)
    - H(4)
    - H(5)
  - - N(6)
    - N(7)
    - N(8)
  - - H(9)
    - H(10)
    - H(11)
