umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_borontrifluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - F(0)
    - B(1)
    - F(2)
  - - F(3)
