umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_butadiene_s_trans.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2h
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
  - - C(2)
    - C(3)
  - - H(4)
    - H(5)
  - - H(6)
    - H(7)
  - - H(8)
    - H(9)
